[metadata]
name = grocery
version = 1.4.1
url = https://github.com/mrene327/grocery
author = Wenlong Chen
author_email = mrene327@gmail.com
description = A grocery helper
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
